--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookies-next": "^2.1.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1"
